# costem-web

./: .gitignore
benchmark/: script.js
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/src/: app.html
client/src/routes/: +page.svelte  Navbar.svelte
fastapi-tflite/: Dockerfile  cvtmodel.py  main.py  predict.py  pyproject.toml
onnx-rest/: CMakeLists.txt  main.cpp  vcpkg.json
